# aoc2025

./: .gitignore  README.md  flake.nix  meson.build  meson.options
nix/: shell.nix
src/: day1.c  day1.h  day2.c  day2.h  day3.c  day3.h  day4.c  day4.h  day4_omnicheck  day5.c  day5.h  day6.c  day6.h  day7.c  day7.h  main.c
